--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ paginate = 5 #frontpage pagination
 
 [params]
   slogan = "My Bruus!"
-  description = "Describe your website" # meta description
+  description = "My life in pictures" # meta description
   author = "Göran Svensson"
   authorLink = "https://appernetic.io/"
   bio = [
@@ -58,7 +58,7 @@ paginate = 5 #frontpage pagination
   facebook      = "full profile url in facebook"
   #googleplus    = "full profile url in googleplus"
   email         = "email@example.com"
-  #twitter       = "full profile url in twitter"
+  #lstwitter       = "full profile url in twitter"
   linkedin      = "full profile url in linkedin"
   #stackoverflow = "full profile url in stackoverflow"
   instagram     = "full profile url in instagram"
