changed email in config toml

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ paginate = 5 #frontpage pagination
   author = "Alex Zhang"
   authorLink = "https://appernetic.io/"
   bio = [
-    "Current computer science/jazz studies student at the University of Michigan.  "
+    "Current computer science/jazz studies student at the University of Michigan.  Avid "
   ]
   copyright = [
     "&copy; 2018 Göran Svensson",
@@ -37,7 +37,7 @@ paginate = 5 #frontpage pagination
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "goran@molnsys.com"
+  email = "alexzhang2016@gmail.com"
 
   # Nav links in the side bar
   [[menu.main]]
@@ -58,7 +58,7 @@ paginate = 5 #frontpage pagination
   [params.social]
   facebook      = "full profile url in facebook"
   #googleplus    = "full profile url in googleplus"
-  email         = "email@example.com"
+  email         = "alexzhang2016@gmail.com"
   #lstwitter       = "full profile url in twitter"
   linkedin      = "full profile url in linkedin"
   #stackoverflow = "full profile url in stackoverflow"
