--- a/config.toml
+++ b/config.toml
@@ -56,13 +56,13 @@ paginate = 5 #frontpage pagination
   weight = 3
 
   [params.social]
-  facebook      = "full profile url in facebook"
+  facebook      = "https://www.facebook.com/AlexZhang1245"
   #googleplus    = "full profile url in googleplus"
   email         = "alexzhang2016@gmail.com"
   #lstwitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
+  linkedin      = "https://www.linkedin.com/in/alex-zhang2016/"
   #stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
+  instagram     = "https://www.instagram.com/alexzhang12/"
   github        = "https://github.com/zhaalex"
   #pinterest     = "full profile url in pinterest"
   #rss           = true
